# training-page

./: .dockerignore  .gitignore  Pipfile  README.md  docker-compose.yml  pyproject.toml
app/: main.py
app/config/: config.py  social_media.yml
app/static/css/: main.css
app/templates/: home.html
app/templates/shared/: layout.html
